--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -25,11 +25,11 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # # Authentication via credentials json
-    # - id: 'auth'
-    #   uses: 'google-github-actions/auth@v0'
-    #   with:
-    #     credentials_json: '${{ secrets.GKE_SA_KEY }}'
+    # Authentication via credentials json
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v0'
+      with:
+        credentials_json: '${{ secrets.GKE_SA_KEY }}'
 
     # Setup gcloud CLI
     - name: Set up Cloud SDK
