--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # Authentication via credentials json
+    # Authentication via credentials jso
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
