--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -25,12 +25,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # Authentication via credentials jso
     - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v0.4.0'
       with:
-        credentials_json: '${{ secrets.GKE_SA_KEY }}'
-
+        workload_identity_provider: 'projects/$PROJECT_ID/locations/global/workloadIdentityPools/webscrapper-github-pool/providers/webscrapper-github-provider'
+        service_account: ${{ secrets.GCP_SE_ACC }}
+    
     # Setup gcloud CLI
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
@@ -44,3 +45,4 @@ jobs:
         kubectl apply -f deployment.yml
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
+
