--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -29,8 +29,8 @@ jobs:
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0.4.0'
       with:
-        workload_identity_provider: 'projects/123456789/locations/global/workloadIdentityPools/webscrapper-github-pool/providers/webscrapper-github-provider'
-        service_account: 'webscrapper-service@$PROJECT_ID.iam.gserviceaccount.com '
+        workload_identity_provider: 'projects/webscrapper-71830/locations/global/workloadIdentityPools/webscrapper-github-pool/providers/webscrapper-github-provider'
+        service_account: 'webscrapper-service@webscrapper-71830.iam.gserviceaccount.com '
     
     # Setup gcloud CLI
     - name: Set up Cloud SDK
