--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -29,7 +29,7 @@ jobs:
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0.4.0'
       with:
-        workload_identity_provider: 'https://iam.googleapis.com/projects/886237649633/locations/global/workloadIdentityPools/webscrapper-github-pool/providers/webscrapper-github-provider'
+        workload_identity_provider: 'projects/886237649633/locations/global/workloadIdentityPools/webscrapper-github-pool/providers/webscrapper-github-provider'
         service_account: 'webscrapper-service@webscrapper-71830.iam.gserviceaccount.com '
     
     # Setup gcloud CLI
