--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -30,7 +30,7 @@ jobs:
       uses: 'google-github-actions/auth@v0.4.0'
       with:
         workload_identity_provider: 'projects/886237649633/locations/global/workloadIdentityPools/webscrapper-github-pool/providers/webscrapper-github-provider'
-        service_account: 'webscrapper-service@$PROJECT_ID.iam.gserviceaccount.com'
+        service_account: 'webscrapper-service@"webscrapper-71830.iam.gserviceaccount.com'
     
     # Setup gcloud CLI
     - name: Set up Cloud SDK
@@ -38,7 +38,7 @@ jobs:
 
     # Get the GKE credentials so we can deploy to the cluster
     - run: |-
-        gcloud container clusters get-credentials webscrapper-cluster --zone europe-central2
+        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
     # Deploy sample image to the GKE cluster
     - name: Deploy
       run: |-
