--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -38,11 +38,11 @@ jobs:
 
     # Get the GKE credentials so we can deploy to the cluster
     - run: |-
-        gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+        gcloud container clusters get-credentials webscrapper-cluster --zone europe-central2
     # Deploy sample image to the GKE cluster
     - name: Deploy
       run: |-
         kubectl apply -f deployment.yml
-        kubectl rollout status deployment/$DEPLOYMENT_NAME
+        kubectl rollout status deployment/webscrapper-deploy
         kubectl get services -o wide
 
