--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -6,7 +6,7 @@ on:
     - main
 
 env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
+  PROJECT_ID: webscrapper-71830
   GKE_CLUSTER: webscrapper-cluster
   GKE_ZONE: europe-central2
   DEPLOYMENT_NAME: webscrapper-deploy
