--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -10,6 +10,7 @@ env:
   GKE_CLUSTER: webscrapper-cluster
   GKE_ZONE: europe-central2
   DEPLOYMENT_NAME: webscrapper-deploy
+  TAG: v1.0.0
 
 jobs:
   setup-and-deploy:
@@ -44,15 +45,13 @@ jobs:
     - name: Build
       run: |-
         docker build \
-          --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
+          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:v1.0.0" \
           ../webscrapper-front
 
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |-
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+        docker push "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:v1.0.0"
 
     # Deploy sample image to the GKE cluster
     - name: Deploy
