--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build
       run: |-
         docker build \
-          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:v1.0.4" \
+          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA \
           ./webscrapper-front/
 
     - name: Giving access to zone
@@ -54,12 +54,12 @@ jobs:
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |-
-        docker push "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:v1.0.4"
+        docker push "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA"
 
     # Deploy sample image to the GKE cluster
     - name: Deploy
       run: |-
-        kustomize edit set image europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front=europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:v1.0.4
+        kustomize edit set image europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front=europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA
         kubectl apply -k .
         kubectl get services -o wide
 
