--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build
       run: |-
         docker build \
-          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA \
+          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA" \
           ./webscrapper-front/
 
     - name: Giving access to zone
