--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -44,7 +44,7 @@ jobs:
     - name: Build
       run: |-
         docker build \
-          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA" \
+          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}" \
           ./webscrapper-front/
 
     - name: Giving access to zone
@@ -54,12 +54,12 @@ jobs:
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |-
-        docker push "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA"
+        docker push "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}"
 
     # Deploy sample image to the GKE cluster
     - name: Deploy
       run: |-
-        kustomize edit set image europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front=europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:$GITHUB_SHA
+        kustomize edit set image europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front=europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}
         kubectl apply -k .
         kubectl get services -o wide
 
