--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -10,6 +10,7 @@ env:
   GKE_CLUSTER: webscrapper-cluster
   GKE_ZONE: europe-central2
   DEPLOYMENT_NAME: webscrapper-deploy
+  NEW_IMAGE: europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}
 
 jobs:
   setup-and-deploy:
@@ -37,6 +38,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v0
 
     # Get the GKE credentials so we can deploy to the cluster
+    - name: Get gcloud credentials
     - run: |-
         gcloud container clusters get-credentials webscrapper-cluster --zone europe-central2
 
@@ -44,7 +46,7 @@ jobs:
     - name: Build
       run: |-
         docker build \
-          --tag "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}" \
+          --tag "$NEW_IMAGE" \
           ./webscrapper-front/
 
     - name: Giving access to zone
@@ -54,12 +56,12 @@ jobs:
     # Push the Docker image to Google Container Registry
     - name: Publish
       run: |-
-        docker push "europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}"
+        docker push "$NEW_IMAGE"
 
     # Deploy sample image to the GKE cluster
     - name: Deploy
       run: |-
-        kustomize edit set image europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front=europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}
+        kustomize edit set image europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front=$NEW_IMAGE
         kubectl apply -k .
         kubectl get services -o wide
 
