--- a/.github/workflows/front.yml
+++ b/.github/workflows/front.yml
@@ -4,14 +4,15 @@ on:
   push:
     branches:
     - main
+    paths:
+    - webscrapper-front/**
 
 env:
   PROJECT_ID: webscrapper-71830
   GKE_CLUSTER: webscrapper-cluster
   GKE_ZONE: europe-central2
-  DEPLOYMENT_NAME: webscrapper-deploy
+  DEPLOYMENT_NAME: webscrapper-front
   NEW_IMAGE: europe-central2-docker.pkg.dev/webscrapper-71830/webscrapper-repo/webscrapper-front:${{github.run_number}}
-  SERVICE_NAME: webscrapper-front
 
 jobs:
   setup-and-deploy:
@@ -62,7 +63,7 @@ jobs:
     # Deploy sample image to the GKE cluster
     - name: Deploy
       run: |-
-        kustomize edit set image $SERVICE_NAME=$NEW_IMAGE
-        kubectl apply -k .
+        (cd webscrapper-front && kustomize edit set image $DEPLOYMENT_NAME=$NEW_IMAGE)
+        kubectl apply -k ./webscrapper-front/
         kubectl get services -o wide
 
