--- a/webscrapper-scrapper/package.json
+++ b/webscrapper-scrapper/package.json
@@ -4,11 +4,12 @@
   "description": "scrapper",
   "main": "index.mjs",
   "scripts": {
-    "start": "nodemon index.mjs"
+    "start": "node index.mjs"
   },
   "author": "Piotr Ulanowski",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.3",
     "pg-promise": "^10.11.1"
   }
 }
