gcloud auth db proxy

--- a/webscrapper-scrapper/deployment.yml
+++ b/webscrapper-scrapper/deployment.yml
@@ -21,9 +21,39 @@ spec:
       labels:
         app: "webscrapper-scrapper"
     spec:
+      serviceAccountName: pages-db-ksacc
       containers:
       - name: "webscrapper-scrapper-sha256-1"
         image: "webscrapper-scrapper"
+        env:
+        - name: DB_USER
+          valueFrom:
+            secretKeyRef:
+              name: db-pages
+              key: username
+        - name: DB_PASS
+          valueFrom:
+            secretKeyRef:
+              name: db-pages
+              key: password
+        - name: DB_NAME
+          valueFrom:
+            secretKeyRef:
+              name: db-pages
+              key: database
+      - name: cloud-sql-proxy
+        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0 # make sure the use the latest version
+        command:
+          - "/cloud_sql_proxy"
+          - "-log_debug_stdout"
+          - "-instances=pages-scrapper=tcp:5432"
+        securityContext:
+          runAsNonRoot: true
+        resources:
+          requests:
+            memory: "1Gi"
+            cpu:    "1"
+
 ---
 apiVersion: "autoscaling/v2beta1"
 kind: "HorizontalPodAutoscaler"
