--- a/webscrapper-scrapper/deployment.yml
+++ b/webscrapper-scrapper/deployment.yml
@@ -43,6 +43,10 @@ spec:
               key: database
       - name: cloud-sql-proxy
         image: gcr.io/cloudsql-docker/gce-proxy:1.28.0 # make sure the use the latest version
+        command:
+          - "/cloud_sql_proxy"
+          - "-log_debug_stdout"
+          - "-instances=pages-scrapper=tcp:5432"
 
 ---
 apiVersion: "autoscaling/v2beta1"
