--- a/webscrapper-scrapper/deployment.yml
+++ b/webscrapper-scrapper/deployment.yml
@@ -42,11 +42,13 @@ spec:
               name: db-pages
               key: database
       - name: cloud-sql-proxy
-        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0 # make sure the use the latest version
+        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0 # make sure the use the latest versio
         command:
           - "/cloud_sql_proxy"
           - "-log_debug_stdout"
-          - "-instances=pages-scrapper=tcp:5432"
+          - "-instances=pages-scrapper:europe-central2=tcp:0.0.0.0:5432"
+        securityContext:
+          runAsNonRoot: true
 
 ---
 apiVersion: "autoscaling/v2beta1"
