--- a/webscrapper-scrapper/deployment.yml
+++ b/webscrapper-scrapper/deployment.yml
@@ -44,7 +44,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: firebase-db
-              key: databaseUrl
+              key: databaseURL
         - name: MESSAGING_SENDER_ID
           valueFrom:
             secretKeyRef:
