--- a/webscrapper-scrapper/package.json
+++ b/webscrapper-scrapper/package.json
@@ -9,6 +9,7 @@
   "author": "Piotr Ulanowski",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "firebase": "^9.6.11",
     "pg-promise": "^10.11.1"
